[tool.poetry]
name = "terrariaitemdrop"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.0.6"
regex = "^2020.11.13"
urlextract = "^1.2.0"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
